--- a/index.html
+++ b/index.html
@@ -5,98 +5,117 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <header>
-      <a href="./index.html">Britlex</a>
+      <a class="logo link" href="./index.html">Brit<span>lex</span></a>
       <nav>
-        <ul>
-          <li><a href="./index.html">Home</a></li>
-          <li><a href="#skills">Skills</a></li>
-          <li><a href="#about">About Us</a></li>
-          <li><a href="#pricing">Pricing</a></li>
-          <li><a href="#contacts">Contacts</a></li>
+        <ul class="list">
+          <li>
+            <a class="menu-link link current" href="./index.html">Home</a>
+          </li>
+          <li><a class="menu-link link" href="#skills">Skills</a></li>
+          <li><a class="menu-link link" href="#about">About Us</a></li>
+          <li><a class="menu-link link" href="#pricing">Pricing</a></li>
+          <li><a class="menu-link link" href="#contacts">Contacts</a></li>
         </ul>
       </nav>
-      <button type="button">Let&rsquo;s Talk</button>
+      <button class="header-button button" type="button">
+        Let&rsquo;s Talk
+      </button>
     </header>
     <main>
-      <section>
-        <h1>Learn Any Foreign Language</h1>
-        <p>
+      <section class="hero">
+        <h1 class="hero-title">Learn Any Foreign Language</h1>
+        <p class="hero-text">
           With our teachers who write a program for each student, you will be
           able to make your first sketch after the first lesson.
         </p>
-        <button type="button">Get started</button>
+        <button class="hero-btn button" type="button">Get started</button>
         <img src="./img/map-languages.png" alt="map languages" width="654" />
       </section>
-      <section>
-        <h2 id="skills">Skills</h2>
-        <ul>
-          <li>
+      <section class="skills">
+        <h2 class="title" id="skills">Skills</h2>
+        <ul class="skills-list list">
+          <li class="skills-list__item">
             <img src="./img/skills-1.png" alt="dialog" width="390" />
-            <h3>Speaking</h3>
-            <p>
+            <h3 class="skills-list__title">Speaking</h3>
+            <p class="skills-list__text">
               Improve your English skills and confidence. Live classes and
               interactive lessons online. 20% extra free for a limited time only
             </p>
-            <p>
+            <p class="skills-list__text">
               Learn English online and improve your skills through our
               high-quality courses and resources – all designed for adult
               language learners.
             </p>
-            <button type="button">Learn more</button>
+            <button class="skills-list__btn button" type="button">
+              Learn more
+            </button>
           </li>
-          <li>
+          <li class="skills-list__item">
             <img src="./img/skills-2.png" alt="writing" width="390" />
-            <h3>Writing</h3>
-            <p>
+            <h3 class="skills-list__title">Writing</h3>
+            <p class="skills-list__text">
               One of the most important and extensive areas of natural science,
               the science that studies substances, also their composition
             </p>
-            <button type="button">Learn more</button>
+            <button class="skills-list__btn button" type="button">
+              Learn more
+            </button>
           </li>
-          <li>
+          <li class="skills-list__item">
             <img src="./img/skills-3.png" alt="reading book" width="390" />
-            <h3>Reading</h3>
-            <p>
+            <h3 class="skills-list__title">Reading</h3>
+            <p class="skills-list__text">
               Perception and response actions of the user resulting from the use
               and/or upcoming use of the product, system or service
             </p>
-            <button type="button">Learn more</button>
+            <button class="skills-list__btn button" type="button">
+              Learn more
+            </button>
           </li>
-          <li>
+          <li class="skills-list__item">
             <img src="./img/skills-4.png" alt="listening lesson" width="390" />
-            <h3>Listening</h3>
-            <p>
+            <h3 class="skills-list__title">Listening</h3>
+            <p class="skills-list__text">
               Here you can find activities to practise your listening skills.
               Listening will help you to improve your understanding
             </p>
-            <button type="button">Learn more</button>
+            <button class="skills-list__btn button" type="button">
+              Learn more
+            </button>
           </li>
         </ul>
       </section>
-      <section>
-        <h2 id="about">About Us</h2>
-        <p>
+      <section class="about">
+        <h2 class="title" id="about">About Us</h2>
+        <p class="about-text">
           The model offers a framework for discussing problems related to the
           user's experience, as well as possible ways and means of solving them.
           Application development begins at the top level (strategy), where the
           future software product is described quite abstractly from the point
           of view of the expectations of both users and the customer.
         </p>
-        <ul>
-          <li>
-            <p>800</p>
-            <p>Pupils</p>
+        <ul class="stats-list list">
+          <li class="stats-list__item">
+            <p class="stats-list__num">800</p>
+            <p class="stats-list__members">Pupils</p>
           </li>
-          <li>
-            <p>18</p>
-            <p>Teachers</p>
+          <li class="stats-list__item">
+            <p class="stats-list__num">18</p>
+            <p class="stats-list__members">Teachers</p>
           </li>
-          <li>
-            <p>6</p>
-            <p>Foreign languages</p>
+          <li class="stats-list__item">
+            <p class="stats-list__num">6</p>
+            <p class="stats-list__members">Foreign languages</p>
           </li>
         </ul>
         <img
@@ -105,61 +124,72 @@
           width="540"
         />
       </section>
-      <section>
-        <h2 id="pricing">Pricing</h2>
-        <ul>
+      <section class="pricing">
+        <h2 class="title" id="pricing">Pricing</h2>
+        <ul class="list">
           <li>
             <img src="./img/pricing-1.png" alt="online course" />
-            <h3>Self-study online course</h3>
-            <p>
+            <h3 class="pricing-title">Self-study online course</h3>
+            <p class="pricing-text">
               Start learning English online in live classes with qualified EC
               teachers and students from all over the world.
             </p>
-            <div>
-              <p>&pound;5.99</p>
-              <p>per month</p>
+            <div class="pricing-bottom">
+              <p class="pricing-price">&pound;5.99</p>
+              <p class="pricing-period">per month</p>
             </div>
           </li>
           <li>
             <img src="./img/pricing-2.png" alt="live lesson" />
-            <h3>Live online classes</h3>
-            <p>
+            <h3 class="pricing-title">Live online classes</h3>
+            <p class="pricing-text">
               Interactive group classes with expert teachers. Free 7-day trial
             </p>
-            <div>
-              <p>&pound;12.99</p>
-              <p>per month</p>
+            <div class="pricing-bottom">
+              <p class="pricing-price">&pound;12.99</p>
+              <p class="pricing-period">per month</p>
             </div>
           </li>
           <li>
             <img src="./img/pricing-3.png" alt="personal lesson" />
-            <h3>Personal Tuition</h3>
-            <p>
+            <h3 class="pricing-title">Personal Tuition</h3>
+            <p class="pricing-text">
               Online one-to-one English tutoring – enjoy our first session for
               only $1
             </p>
-            <div class="">
-              <p>&pound;12.99</p>
-              <p>per month</p>
+            <div class="pricing-bottom">
+              <p class="pricing-price">&pound;12.99</p>
+              <p class="pricing-period">per month</p>
             </div>
           </li>
         </ul>
       </section>
-      <section id="contact">
+      <section class="contact" id="contact">
         <img src="./img/contact-bg.png" alt="send email" width="425" />
-        <h2>Contact Us</h2>
-        <p>
+        <h2 class="title">Contact Us</h2>
+        <p class="contact-text">
           Discover your current English level by taking our free online English
           test. Sign up to our newsletter for learning tips and free resources
         </p>
+        <button class="contact-btn" type="button">Subscribe</button>
       </section>
     </main>
     <footer>
-      <a href="./index.html">Britlex</a>
-      <ul>
-        <li><a href="#" target="_blank">Terms and Conditions</a></li>
-        <li><a href="#" target="_blank">Privacy Policy</a></li>
-        <li><a href="#" target="_blank">Cookie Policy</a></li>
+      <a class="logo link" href="./index.html">Brit<span>lex</span></a>
+      <ul class="list">
+        <li>
+          <a class="footer-link link" href="#" target="_blank"
+            >Terms and Conditions</a
+          >
+        </li>
+        <li>
+          <a class="footer-link link" href="#" target="_blank"
+            >Privacy Policy</a
+          >
+        </li>
+        <li>
+          <a class="footer-link link" href="#" target="_blank">Cookie Policy</a>
+        </li>
       </ul>
     </footer>
   </body>
