--- a/index.html
+++ b/index.html
@@ -278,6 +278,42 @@
             >
           </li>
         </ul>
+        <ul class="social-list">
+          <li class="social-list__item">
+            <a
+              class="social-list__link"
+              href=""
+              target="_blank"
+              rel="noopener noreferer"
+              aria-label="link to insta"
+            >
+              <svg class="social-list__icon" width="16" heigth="16">
+                <use href="./img/symbol-defs.svg#icon-insta"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-list__item">
+            <a class="social-list__link" href="">
+              <svg class="social-list__icon" width="16" height="16">
+                <use href="./img/symbol-defs.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-list__item">
+            <a class="social-list__link" href="">
+              <svg class="social-list__icon" width="16" height="16">
+                <use href="./img/symbol-defs.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-list__item">
+            <a class="social-list__link" href="">
+              <svg class="social-list__icon" width="16" height="16">
+                <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
       </div>
     </footer>
   </body>
